102 files changed, 7848 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -1,5 +1,4 @@
 footer {
-    margin-top: auto;
-    display: block;
-    font-size: 15px;
+    background-color: transparent;
+    border: none;
 }
