--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url("/Public/assets/pictures/landing.jpg");
+}
+
 footer {
     background-color: transparent;
     border: none;
