--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -1,5 +1,14 @@
-body {
-    background-color: #3b3b3b;
+.overlay {
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    background: rgba(33, 47, 62, 0.9);
+    display: block;
+    z-index: 2;
+    visibility: hidden;
+    opacity: 0;
 }
 
 footer {
