--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -1,7 +1,22 @@
+body {
+    overflow-y: hidden;
+}
+
+.background {
+    width: 100%;
+    height: 100%;
+}
+
+.background-image img {
+    width: 100%;
+    height: 100%;
+}
+
 .overlay {
     background: rgba(33, 47, 62, 0.9);
-    z-index: 2;
+    z-index: auto;
     visibility: visible;
+    opacity: 1;
 }
 
 footer {
