--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -7,7 +7,7 @@ body {
     height: 100%;
 }
 
-.background-image {
+.background-image, .background-image img {
     width: 100%;
     height: 100%;
 }
