--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -7,9 +7,10 @@ body {
     height: 100%;
 }
 
-.background-image, .background-image img {
+.background-image {
     width: 100%;
     height: 100%;
+    background-image: url("/Public/assets/pictures/landing/landing.jpg");
 }
 
 .overlay {
