--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -5,6 +5,11 @@ body {
 .background {
     width: 100%;
     height: 100%;
+    z-index: -1;
+}
+
+.container {
+    z-index: 0;
 }
 
 .background-image {
