--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -1,15 +1,12 @@
 body {
     overflow-y: hidden;
+    display: flex;
 }
 
 .background {
     width: 100%;
     height: 100%;
     z-index: -1;
-}
-
-.container {
-    z-index: 0;
 }
 
 .background-image {
