--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -2,6 +2,12 @@ body {
     overflow-y: hidden;
 }
 
+body .overlay {
+    -webkit-animation: none;
+    -o-animation: none;
+    animation: none;
+}
+
 .background {
     width: 100%;
     height: 100%;
