--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -30,6 +30,16 @@ body .overlay {
     opacity: 1;
 }
 
+.left-overlay {
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    background: rgba(255, 255, 255, 0.7);
+    display: block;
+}
+
 footer {
     background-color: transparent;
     border: none;
