105 files changed, 7941 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -32,11 +32,11 @@ body .overlay {
 
 .left-overlay {
     bottom: 0;
-    left: 0;
+    left: 65%;
     position: fixed;
     right: 0;
     top: 0;
-    background: rgba(255, 255, 255, 0.7);
+    background: #2b3441;
     display: block;
 }
 
