106 files changed, 7975 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -38,6 +38,10 @@ body .overlay {
     height: 100%;
 }
 
+.demo img {
+    width: 100%;
+}
+
 .landing-content {
     display: flex;
     margin: auto;
