--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -36,6 +36,7 @@ body .overlay {
 .demo {
     width: 100%;
     height: 100%;
+    display: flex;
 }
 
 .demo img {
@@ -54,10 +55,10 @@ body .overlay {
 }
 
 .phone {
-    width: 15%;
+    width: 10%;
     position: absolute;
-    left: 72%;
-    top: 10%;
+    left: 62%;
+    top: 40%;
 }
 
 .overlay {
