106 files changed, 7992 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -52,6 +52,11 @@ body .overlay {
 .web {
     width: 80%;
     margin: 0 auto;
+    position: relative;
+}
+
+.device {
+    position: absolute;
 }
 
 .phone {
