106 files changed, 8052 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -101,6 +101,16 @@ body .overlay {
 
 .left {
     flex: 1;
+    display: flex;
+}
+
+.left .content {
+    display: flex;
+    margin: auto;
+}
+
+.left .c-button {
+    position: relative;
 }
 
 footer {
