106 files changed, 8070 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -160,6 +160,13 @@ body[has_aside] .aside-bar {
     background-color: #202020;
 }
 
+.c-button .button-light-blue.button-content, .c-button-input.button-light-blue {
+    background-color: #2f3b4c;
+}
+
+.c-button .button-light-blue.button-content:hover, .c-button-input.button-light-blue:hover {
+    background-color: #373737;
+}
 
 .c-button .button-red.button-content, .c-button-input.button-red {
     background-color: #e53935;
