--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -1,26 +1,17 @@
 body {
     overflow-y: hidden;
+    width: 100%;
+    height: 100%;
+    background-image: url("/Public/assets/pictures/landing/landing.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 body .overlay {
     -webkit-animation: none;
     -o-animation: none;
     animation: none;
-}
-
-.background {
-    width: 100%;
-    height: 100%;
     z-index: -1;
-    position: fixed;
-}
-
-.background-image {
-    width: 100%;
-    height: 100%;
-    background-image: url("/Public/assets/pictures/landing/landing.jpg");
-    background-position: center;
-    background-size: cover;
 }
 
 .main-content {
@@ -91,12 +82,13 @@ body .overlay {
 
 .left-overlay {
     bottom: 0;
-    left: 65%;
-    position: fixed;
+    width: 100%;
+    position: absolute;
     right: 0;
     top: 0;
     background: #2b3441;
     display: block;
+    z-index: -1;
 }
 
 .left {
@@ -130,7 +122,6 @@ body .overlay {
     position: relative;
 }
 
-footer {
-    background-color: transparent;
-    border: none;
+@media only screen and (max-width: 1536px) {
+
 }
