106 files changed, 7955 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -104,6 +104,8 @@ body .overlay {
 .right .infos {
     margin: 0 auto 2rem auto;
     position: relative;
+    -webkit-animation: start_anim 0.5s;
+    animation: start_anim 0.5s;
 }
 
 .right .infos .title {
