--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -131,7 +131,7 @@ body .overlay {
 }
 
 @-webkit-keyframes start_anim {
-    0% {left:150%;}
+    0% {left:150%;opacity: 0}
     50% {opacity: 0}
     100% {left:0;opacity:1;}
 }
