--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -136,9 +136,8 @@ body .overlay {
 }
 
 @keyframes start_anim {
-    0% {left:150%;opacity:0}
-    50% {opacity: 0}
-    100% {left:0;opacity:1;}
+    from {left:105%;opacity: 0}
+    to {left:0;opacity:1;}
 }
 
 @media only screen and (max-width: 850px) {
