106 files changed, 7970 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -158,5 +158,6 @@ body .overlay {
     .main-content {
         flex-direction: column;
         height: auto;
+        overflow-x: auto;
     }
 }
