106 files changed, 7973 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/landing.css
+++ b/camagru/Public/assets/css/landing.css
@@ -158,6 +158,9 @@ body .overlay {
     .main-content {
         flex-direction: column;
         height: auto;
+    }
+
+    .container {
         overflow-x: auto;
     }
 }
